# logseq-migration

./: .gitignore  LICENSE  README.md  ROADMAP.md  setup.cfg
plan/: journal.md
src/: downloadfirebase.py  migrater.py
src/logseq/migration/: migrater.py  monitor.py
src/migrate/: migrater.py
src/migration/: migrater.py
test/: __init__.py
test/data/test/: test_export.json
test/migrate/: samples.py  test_e2e.py  test_migrate.py
test/migrate/e2e/: test_e2e.py
test/migrate/integration/: test_failed_download_is_logged.py  test_integration.py
