[metadata]
name = logseq-migration
version = 0.1.12
author = Romilly Cocking
author_email = romilly.cocking@gmail.com
description = Download and use local copies of assets in logseq after importing a file from Roam.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/romilly/logseq-mirgation
project_urls =
    Bug Tracker = https://github.com/romilly/logseq-mirgation/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
   requests
   PyHamcrest

[options.entry_points]
console_scripts =
    localise_assets = logseq.migration.migrater:main

[options.packages.find]
where = src